# webserv

./: CMakeLists.txt  Makefile  README.md  a.out  autoindex.py  test.cpp  test.py  webserv  webserv.logs
YoupiBanane/: Youpi.conf  index.html
bootstrap5/css/: bootstrap-grid.css.map  bootstrap-grid.rtl.css.map  bootstrap-reboot.css.map  bootstrap-reboot.min.css.map  bootstrap-reboot.rtl.css.map  bootstrap-reboot.rtl.min.css.map  bootstrap-utilities.css.map  bootstrap-utilities.min.css.map  bootstrap-utilities.rtl.css.map  bootstrap-utilities.rtl.min.css.map  bootstrap.css.map  bootstrap.min.css  bootstrap.min.css.map  bootstrap.rtl.css.map  bootstrap.rtl.min.css.map
bootstrap5/js/: bootstrap.bundle.js  bootstrap.bundle.min.js  bootstrap.esm.js  bootstrap.esm.min.js  bootstrap.js  bootstrap.min.js
cgi-bin/: add_image.py  autoindex.py  form.py  form_signup.py  functions.py  home.py  image.py  login.py  logout.py  outfile.py  profile.py  publish.py  redirect_home.py  rm_post.py  send_file.py  signup.py  upload.py  web.db
config/: default.conf
error_pages/: 400.html  401.html  403.html  404.html  405.html  413.html  500.html  501.html  503.html  504.html
hdrs/: Config.hpp  ConfigParams.hpp  IServer.hpp  Request.hpp  Response.hpp  Server.hpp  SimpSocket.hpp  Urls.hpp  Utils.hpp
pages/: nav.html  nav_log.html
srcs/: Config.cpp  Request.cpp  Response.cpp  Server.cpp  SimpSocket.cpp  Urls.cpp  Utils.cpp  main.cpp
